k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: eventhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: eventhub-frontend-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
