k8s/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: eventhub
spec:
  selector:
    app: event-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
